--- a/codeinputlib/build.gradle
+++ b/codeinputlib/build.gradle
@@ -21,6 +21,6 @@ android {
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar']
+  compile fileTree(dir: 'libs', include: ['*.jar'])
 
 }
